--- a/index.html
+++ b/index.html
@@ -118,6 +118,57 @@
       </div>
     </section>
 
+    <section class="py-5">
+      <h2 class="fw-bold text-center pb-1">Nossos Produtos</h2>
+
+      <div class="container row mx-auto g-4 justify-content-center">
+
+        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
+          <img src="./assets/produtos-cafe-tradicional.png" class="card-img-top" alt="Xícara de café preto e corajoso">
+          <div class="card-body text-center">
+            <h3 class="card-text fw-bold">Cafés Tradicionais</h3>
+          </div>
+        </div>
+
+        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
+          <img src="./assets/produtos-cafe-especial.png" class="card-img-top" alt="Xícara de café especial cremoso">
+          <div class="card-body text-center">
+            <h3 class="card-text fw-bold">Cafés Especiais</h3>
+          </div>
+        </div>
+
+        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
+          <img src="./assets/produtos-vitaminas.png" class="card-img-top" alt="Copos de Vitaminas Cremosas">
+          <div class="card-body text-center">
+            <h3 class="card-text fw-bold">Smoothies e Vitaminas</h3>
+          </div>
+        </div>
+
+        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
+          <img src="./assets/produtos-paes.png" class="card-img-top" alt="Cesta de pães com variados tipos de pães">
+          <div class="card-body text-center">
+            <h3 class="card-text fw-bold">Pães e Focaccias</h3>
+          </div>
+        </div>
+
+        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
+          <img src="./assets/produtos-doces.png" class="card-img-top" alt="Bolo pelado recheado de Morango">
+          <div class="card-body text-center">
+            <h3 class="card-text fw-bold">Doces</h3>
+          </div>
+        </div>
+
+        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
+          <img src="./assets/produtos-salgados.png" class="card-img-top" alt="Torta Salgada">
+          <div class="card-body text-center">
+            <h3 class="card-text fw-bold">Salgados</h3>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
     <section class="banners banner-3">
 
     </section>
