--- a/index.html
+++ b/index.html
@@ -69,42 +69,46 @@
     <section class="py-5">
       <h2 class="text-center fw-bold pb-1">Nossos serviços</h2>
 
-      <div class="container d-flex justify-content-around flex-wrap">
+      <div class="row mx-0">
 
-        <div class="card m-4" style="width: 20rem;">
-          <img src="./assets/cafe-card.png" class="card-img-top"
-            alt="Balcão de padaria tradicional com alimentos diversos">
-          <div class="card-body">
-            <h5 class="card-title py-2 fw-bold">Café & Bistrô</h5>
-            <p class="card-text">Nosso bistrô oferece uma ampla variedade de cafés, smoothies, deliciosos
-              salgados e sobremesas. Uma excelente opção para quem busca um lugar tranquilo e
-              aconchegante.</p>
-            <a href="#" class="btn botao-padrao w-100 fw-bold botao-marrom" data-bs-toggle="offcanvas"
-              data-bs-target="#canvas-1" aria-controls="offcanvasRight">Quero detalhes</a>
+        <div class="col-12 col-md-12 col-lg 4">
+          <div class="card m-4 mx-auto" style="width: 20rem;">
+            <img src="./assets/cafe-card.png" class="card-img-top"
+              alt="Balcão de padaria tradicional com alimentos diversos">
+            <div class="card-body">
+              <h5 class="card-title py-2 fw-bold">Café & Bistrô</h5>
+              <p class="card-text">Nosso bistrô oferece uma ampla variedade de cafés, smoothies, deliciosos
+                salgados e sobremesas. Uma excelente opção para quem busca um lugar tranquilo e
+                aconchegante.</p>
+              <a href="#" class="btn botao-padrao w-100 fw-bold botao-marrom" data-bs-toggle="offcanvas"
+                data-bs-target="#canvas-1" aria-controls="offcanvasRight">Quero detalhes</a>
+            </div>
           </div>
         </div>
-
-        <div class="card m-4" style="width: 20rem;">
-          <img src="./assets/buffet-card.png" class="card-img-top" alt="Mesa de buffet com alimentos diversos">
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Buffet</h5>
-            <p class="card-text">Buffet e catering personalizado para eventos, produções e celebrações. Com
-              um menu variado e adaptável às preferências do cliente, atendimento atencioso e
-              profissional.</p>
-            <a href="#" class="btn botao-padrao w-100 fw-bold mt-3 botao-marro" data-bs-toggle="offcanvas"
-              data-bs-target="#canvas-2" aria-controls="offcanvasRight">Quero detalhes</a>
+        <div class="col-12 col-md-12 col-lg 4">
+          <div class="card m-4 mx-auto" style="width: 20rem;">
+            <img src="./assets/buffet-card.png" class="card-img-top" alt="Mesa de buffet com alimentos diversos">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Buffet</h5>
+              <p class="card-text">Buffet e catering personalizado para eventos, produções e celebrações. Com
+                um menu variado e adaptável às preferências do cliente, atendimento atencioso e
+                profissional.</p>
+              <a href="#" class="btn botao-padrao w-100 fw-bold mt-3 botao-marro" data-bs-toggle="offcanvas"
+                data-bs-target="#canvas-2" aria-controls="offcanvasRight">Quero detalhes</a>
+            </div>
           </div>
         </div>
-
-        <div class="card m-4" style="width: 20rem;">
-          <img src="./assets/delivery-card.png" class="card-img-top" alt="Caixa aberta armazenando comidas diversas">
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Delivery</h5>
-            <p class="card-text">Para quem deseja desfrutar no conforto de casa, oferecemos delivery dos
-              produtos. Com o mesmo cardápio variado de sempre, sem perder nosso sabor e padrão de
-              qualidade.</p>
-            <a href="#" class="btn botao-padrao w-100 fw-bold mt-3 botao-marrom" data-bs-toggle="offcanvas"
-              data-bs-target="#canvas-3" aria-controls="offcanvasRight">Quero detalhes</a>
+        <div class="col-12 col-md-12 col-lg 4">
+          <div class="card m-4 mx-auto" style="width: 20rem;">
+            <img src="./assets/delivery-card.png" class="card-img-top" alt="Caixa aberta armazenando comidas diversas">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Delivery</h5>
+              <p class="card-text">Para quem deseja desfrutar no conforto de casa, oferecemos delivery dos
+                produtos. Com o mesmo cardápio variado de sempre, sem perder nosso sabor e padrão de
+                qualidade.</p>
+              <a href="#" class="btn botao-padrao w-100 fw-bold mt-3 botao-marrom" data-bs-toggle="offcanvas"
+                data-bs-target="#canvas-3" aria-controls="offcanvasRight">Quero detalhes</a>
+            </div>
           </div>
         </div>
       </div>
@@ -120,53 +124,56 @@
 
     <section class="py-5">
       <h2 class="fw-bold text-center pb-1">Nossos Produtos</h2>
-
-      <div class="container row mx-auto g-4 justify-content-center">
-
-        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
-          <img src="./assets/produtos-cafe-tradicional.png" class="card-img-top" alt="Xícara de café preto e corajoso">
-          <div class="card-body text-center">
-            <h3 class="card-text fw-bold">Cafés Tradicionais</h3>
+      <div class="row mx-0">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-cafe-tradicional.png" class="card-img-top" alt="Xícara de café preto e corajoso">
+            <div class="card-body text-center">
+              <h3 class="card-text fw-bold">Cafés Tradicionais</h3>
+            </div>
           </div>
         </div>
-
-        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
-          <img src="./assets/produtos-cafe-especial.png" class="card-img-top" alt="Xícara de café especial cremoso">
-          <div class="card-body text-center">
-            <h3 class="card-text fw-bold">Cafés Especiais</h3>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-cafe-especial.png" class="card-img-top" alt="Xícara de café especial cremoso">
+            <div class="card-body text-center">
+              <h3 class="card-text fw-bold">Cafés Especiais</h3>
+            </div>
           </div>
         </div>
-
-        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
-          <img src="./assets/produtos-vitaminas.png" class="card-img-top" alt="Copos de Vitaminas Cremosas">
-          <div class="card-body text-center">
-            <h3 class="card-text fw-bold">Smoothies e Vitaminas</h3>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-vitaminas.png" class="card-img-top" alt="Copos de Vitaminas Cremosas">
+            <div class="card-body text-center">
+              <h3 class="card-text fw-bold">Smoothies e Vitaminas</h3>
+            </div>
           </div>
         </div>
-
-        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
-          <img src="./assets/produtos-paes.png" class="card-img-top" alt="Cesta de pães com variados tipos de pães">
-          <div class="card-body text-center">
-            <h3 class="card-text fw-bold">Pães e Focaccias</h3>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-paes.png" class="card-img-top" alt="Cesta de pães com variados tipos de pães">
+            <div class="card-body text-center">
+              <h3 class="card-text fw-bold">Pães e Focaccias</h3>
+            </div>
           </div>
         </div>
-
-        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
-          <img src="./assets/produtos-doces.png" class="card-img-top" alt="Bolo pelado recheado de Morango">
-          <div class="card-body text-center">
-            <h3 class="card-text fw-bold">Doces</h3>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-doces.png" class="card-img-top" alt="Bolo pelado recheado de Morango">
+            <div class="card-body text-center">
+              <h3 class="card-text fw-bold">Doces</h3>
+            </div>
           </div>
         </div>
-
-        <div class="card border-0 btn col-12 col-md-6 col-xl-4" style="width: 18rem;">
-          <img src="./assets/produtos-salgados.png" class="card-img-top" alt="Torta Salgada">
-          <div class="card-body text-center">
-            <h3 class="card-text fw-bold">Salgados</h3>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card border-0 mx-auto btn" style="width: 18rem;">
+            <img src="./assets/produtos-salgados.png" class="card-img-top" alt="Torta Salgada">
+            <div class="card-body text-center">
+              <h3 class="card-text fw-bold">Salgados</h3>
+            </div>
           </div>
         </div>
-
       </div>
-
     </section>
 
     <section class="banners banner-3">
