--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="./estilos.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Barlow:wght@400;600&display=swap"
@@ -219,6 +220,17 @@
         </div>
       </div>
     </section>
+
+    <footer class="text-center fundo-marrom">
+      <section class="container p-4 pb-0">
+        <div class="p-3">
+          <a href="https://web.whatsapp.com/" class="btn"><i class="bi bi-whatsapp"></i></a>
+          <a href="https://www.instagram.com/" class="btn"><i class="bi bi-instagram"></i></a>
+          <a href="https://x.com/?lang=pt" class="btn"><i class="bi bi-twitter"></i></a>
+        </div>
+        <div class="p-3"><p>2023 <i class="bi bi-c-circle"></i> Desenvolvido por Carlos| Estudante da Alura | Projeto fictício sem fins comerciais.</p></div>
+      </section>
+    </footer>
 
   </main>
 
